# AIS1002_Project_Mappe

./: AirObject.cpp  AirObject.hpp  CMakeLists.txt  GUI.hpp  Graph3D.cpp  Graph3D.hpp  Matplot.py  PID.hpp  README.md  config.yml  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: config.yml
include/: AirObject.hpp  GUI.hpp  Graph3D.hpp  SceneSetup.hpp  Utils.hpp
resources/: AirflowArrow.stl  DragArrow.stl  LiftArrow.stl  NavionPlaneModelPropp.stl
src/: AirObject.cpp  CMakeLists.txt  Graph3D.cpp  SceneSetup.cpp
tests/: CMakeLists.txt  test_AirObject.cpp  test_Controls.cpp  test_Graph3D.cpp  test_object.cpp
